chapter_02/Exercise_2.07_stateful_applications/manifests/applications/app_deployment_sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app
  namespace: devops-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
        - name: request-counter
          image: ilikka/pingpong_app:005
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"    # Requests 0.25 CPU
              memory: "256Mi" # Requests 256MB RAM
            limits:
              cpu: "500m"    # Maximum 0.5 CPU
              memory: "512Mi" # Maximum 512MB RAM
        - name: log-output-app
          image: ilikka/logoutput_app:005
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"    # Requests 0.25 CPU
              memory: "256Mi" # Requests 256MB RAM
            limits:
              cpu: "500m"    # Maximum 0.5 CPU
              memory: "512Mi" # Maximum 512MB RAM
