chapter_02/Exercise_2.07_stateful_applications/manifests/applications/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-svc
  namespace: devops-ns
spec:
  type: ClusterIP
  selector:
    app: pingpong-app
  ports:
    - name: http
      protocol: TCP
      port: 2345  # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3000 # This is the target ports
    - name: pong
      protocol: TCP 
      port: 5000
      targetPort: 5000
