chapter_02/Exercise_2.07_stateful_applications/manifests/applications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-app-ingress
  namespace: devops-ns
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong-app-svc
            port:
              number: 2345
